--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "chalk": "^5.2.0",
     "dotenv": "^16.0.3",
     "firebase": "^9.17.2",
     "firebase-auth": "^0.1.2",
@@ -44,6 +45,7 @@
   "devDependencies": {
     "@babel/core": "^7.21.3",
     "@babel/preset-env": "^7.20.2",
+    "@faker-js/faker": "^7.6.0",
     "babel-loader": "^9.1.2",
     "webpack": "^5.76.2",
     "webpack-cli": "^5.0.1"
