--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "chalk": "^5.2.0",
     "dotenv": "^16.0.3",
     "firebase": "^9.17.2",
+    "firebase-admin": "^11.5.0",
     "firebase-auth": "^0.1.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
@@ -21,6 +22,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "seed": "node script/seed.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
