--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
     "chalk": "^5.2.0",
-    "dotenv": "^16.0.3",
     "firebase": "^9.17.2",
     "firebase-admin": "^11.5.0",
     "firebase-auth": "^0.1.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
