--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "@firebase/webchannel-wrapper": "^0.9.0",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "bootstrap": "^5.2.3",
     "core-js": "^3.29.1",
     "firebase": "^9.17.2",
@@ -17,12 +17,12 @@
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
-    "react-scripts": "^2.1.3",
-    "web-vitals": "^2.1.4",
-    "webpack-cli": "^4.9.2"
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^3.3.0",
+    "webpack-cli": "^5.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "GENERATE_SOURCEMAP=false react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "seed": "node script/seed.js",
