--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@googlemaps/js-api-loader": "^1.15.1",
     "@react-google-maps/api": "^2.18.1",
     "@reduxjs/toolkit": "^1.9.3",
+    "@stripe/firestore-stripe-payments": "^0.0.6",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.51.0",
     "@testing-library/jest-dom": "^5.16.5",
