--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "webpack-cli": "^5.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "GENERATE_SOURCEMAP=false react-scripts start",
     "build": "react-scripts build",
     "seed": "node script/seed.js",
     "test": "react-scripts test",
